recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: not found: value nbPas
if(nbPas==0)
   ^Spiral:8: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameter increment.
	spiral(nbPas-1,90,3+increment)
              ^